# RFantibody

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
include/: download_weights.sh  setup.sh
include/SE3Transformer/se3_transformer/data_loading/: data_module.py
include/SE3Transformer/se3_transformer/runtime/: training.py
include/SE3Transformer/tests/: test_equivariance.py
scripts/: README  proteinmpnn_interface_design.py  rf2_predict.py  rfdiffusion_inference.py
scripts/dev/: README
scripts/examples/proteinmpnn/: ab_pdb_example.sh
scripts/examples/rf2/: ab_pdb_example.sh
scripts/examples/rfdiffusion/: antibody_pdbdesign.sh  antibody_qvdesign.sh  nanobody_pdbdesign.sh  nanobody_qvdesign.sh
scripts/util/: chothia2HLT.py
src/rfantibody/proteinmpnn/: sample_features.py  struct_manager.py  util_protein_mpnn.py
src/rfantibody/proteinmpnn/model/: README
src/rfantibody/rf2/: setup_repo.sh
src/rfantibody/rf2/config/: base.yaml
src/rfantibody/rf2/modules/: model_runner.py  parsers.py  pose_util.py  preprocess.py  rmsd.py  util.py
src/rfantibody/rf2/network/: Attention_module.py  AuxiliaryPredictor.py  Embeddings.py  RoseTTAFoldModel.py  (+9 more)
src/rfantibody/rfdiffusion/: Attention_module.py  Embeddings.py  RoseTTAFoldModel.py  SE3_network.py  Track_module.py  contigs.py  diff_util.py  diffusion.py  igso3.py  kinematics.py  parsers.py  util.py  util_module.py
src/rfantibody/util/: io.py  pose.py  quiver.py
tests/: run_test_suite.py
tests/reference_outputs/: ab_des_0.trb  ab_des_1.trb  ab_designs.qv  nb_des_0.trb  nb_des_1.trb  nb_designs.qv
(+8 files in other folders)
